# DTI5125---Assignment-1

./: README.md  data_preparation.ipynb  data_transformation.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: data_transformation-checkpoint.ipynb
Data/: Partitioned_Abstracts.csv  Query5.csv
scipy-env/: pyvenv.cfg
scipy-env/Scripts/: activate  activate.bat
